Related: fdo#88562 Nothing actually sets ID_FILETP_READONLY or ID_FILETP_TITLE

so docs cannot be toggled r/o r/w from properties page or the file name
changed. Unkink the logic a bit based on that and move now static widget
settings to .ui and remove unused checkbox

Change-Id: Ic55e41be8ffd02e214a233a2eb90736c070b5418